rnsc/tests/snapshots/error-parser-outside_class_directive-before_class_dir-empty.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----

----- STDERR -----
[E-006] Error: file contains no class definition
   ╭─[ test_data/rns_integration/error/parser/outside_class_directive/before_class_dir/empty.rns:1:1 ]
   │
 1 │ 
   │ │ 
   │ ╰─ expected a '.class' directive
   │ 
   │ Help: Make sure the file contains a valid class definition.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-006
───╯
----- HASH -----
not generated
