rnsc/tests/snapshots/error-parser-outside_class_directive-before_class_dir-integer.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
42 ; the answer
.class public HelloWorld

.super java/lang/Object
----- STDERR -----
[E-008] Error: unexpected identifier before class definition
   ╭─[ test_data/rns_integration/error/parser/outside_class_directive/before_class_dir/integer.rns:1:1 ]
   │
 1 │ 42 ; the answer
   │ ─┬  
   │  ╰── valid context for 42 identifier is: 'operand'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
